@@ -8,6 +8,7 @@
 * Fixes an issue with rendering with layout false now you can use: render 'path/to/template', :layout => false
 * Small helpers refactoring
 * fixed mailer initializer issue. cleaned up options[:smtp] merge in delivery.rb
+* fixes tests in padrino helper. stub Padrino.root
 
 == 0.9.5
 
